--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+  <meta name="viewport" content="initial-scale=1, width=device-width" />
 </head>
 
 </html>
