Adjusted styling, added fonts, edited button layout

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <%= htmlWebpackPlugin.options.title %>
   </title>
   <meta name="viewport" content="initial-scale=1, width=device-width" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Actor&family=Catamaran:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 </html>
